# RTS_Planning

./: LICENSE  README.md
roborts_base/include/: chassis.h  gimbal.h
roborts_base/src/: chassis.cpp  gimbal.cpp  roborts_base_node.cpp
roborts_bringup/launch/: base.launch  ip.launch  mapping.launch  roborts.launch  start_rviz.launch  static_tf.launch  test_costmap.launch
roborts_bringup/maps/: RMUA_2020.yaml
roborts_bringup/rviz/: test_finish.rviz
roborts_costmap/config/: costmap_parameter_config_for_global_plan.prototxt  costmap_parameter_config_for_local_plan.prototxt  inflation_layer_config_min.prototxt  obstacle_layer_config.prototxt
roborts_costmap/src/: observation_buffer.cpp  obstacle_layer.cpp  static_layer.cpp
roborts_decision/: CMakeLists.txt  decision_node.cpp  package.xml  sel_behavior_node.cpp
roborts_decision/blackboard/: blackboard.h  communication.h
roborts_decision/config/: decision.prototxt  sel_behave.prototxt
roborts_decision/example_behavior/: ambush_behavior.h  attack_behavior.h  back_boot_area_behavior.h  chase_behavior.h  escape_behavior.h  fixlocalization_behavior.h  gimbal_control_behavior.h  goal_behavior.h  lurk_behavior.h  patrol_behavior.h  reload_behavior.h  (+4 more)
roborts_localization/: localization_config.h  localization_math.cpp  localization_math.h  localization_node.cpp  localization_node.h
roborts_msgs/: CMakeLists.txt
roborts_msgs/action/: ArmorDetection.action  LocalPlanner.action
roborts_msgs/msg/: Armor.msg  ArmorsPos.msg  BuffClearIndex.msg  ChassisMode.msg  CmdAim.msg  MyArmor.msg  Position.msg  ShootMode.msg
(+36 files in other folders)
